# gc_transfer

./: .gitignore  Makefile  gc-transfer.spec  hello.py  pyproject.toml
src/: actions.py  const.py  data.csv  data.py  locate.py  main.py  state.py
